--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
   "author": "Swapnil Nakhate",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.19",
+    "nodemon": "^1.18.10"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/mongodb": "^3.1.22",
+    "@types/mongoose": "^5.3.21",
     "@types/node": "^11.11.1",
     "tslint": "^5.13.1",
     "typescript": "^3.3.3333"
