--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
   "author": "Swapnil Nakhate",
   "license": "ISC",
   "dependencies": {
+    "@types/compression": "0.0.36",
+    "@types/cors": "^2.8.4",
+    "@types/method-override": "0.0.31",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "method-override": "^3.0.0",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.19",
     "nodemon": "^1.18.10"
