--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic NodeJs Express seed project with Typescript",
   "main": "dist/app.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "prebuild": "tslint -c tslint.json -p tsconfig.json",
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
@@ -16,6 +16,8 @@
     "@types/compression": "0.0.36",
     "@types/cors": "^2.8.4",
     "@types/method-override": "0.0.31",
+    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cors": "^2.8.5",
